# laravel.pv125.com/storage/api-docs/api-docs.json
@@ -62,6 +62,81 @@
                 }
             }
         },
+        "/api/category/{id}": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "operationId": "b5e0594038139a2979e671987221c993",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Ідентифікатор категорії",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List Categories."
+                    },
+                    "404": {
+                        "description": "Wrong id",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Sorry, wrong Category Id has been sent. Pls try another one."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Category"
+                ],
+                "operationId": "d2437e8e0e200592efe7305af1c302d7",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Ідентифікатор категорії",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успішне видалення категорії"
+                    },
+                    "404": {
+                        "description": "Категорії не знайдено"
+                    },
+                    "401": {
+                        "description": "Не авторизований"
+                    }
+                }
+            }
+        },
         "/api/category/edit/{id}": {
             "post": {
                 "tags": [
@@ -106,37 +181,6 @@
                 "responses": {
                     "200": {
                         "description": "Add Category."
-                    }
-                }
-            }
-        },
-        "/api/category/{id}": {
-            "delete": {
-                "tags": [
-                    "Category"
-                ],
-                "operationId": "d2437e8e0e200592efe7305af1c302d7",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Ідентифікатор категорії",
-                        "required": true,
-                        "schema": {
-                            "type": "number",
-                            "format": "int64"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Успішне видалення категорії"
-                    },
-                    "404": {
-                        "description": "Категорії не знайдено"
-                    },
-                    "401": {
-                        "description": "Не авторизований"
                     }
                 }
             }
